--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>CodersRank HTML</title>
   </head>
   <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
+    <h1>My CodersRank HTML Training</h1>
+    <p>Hi! I am Lerato and this is my HTML training on CodersRank.</p>
+    <p>I am loving using the platform and hope there will be lots more to learn and grow from going forward.</p>
 
   </body>
 </html>
