codersrank-practice updated greeting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
 
     <h1>My CodersRank HTML Training</h1>
-    <p>Hi! I am Lerato and this is my HTML training on CodersRank.</p>
+    <p>Hello, I am Lerato and this is my HTML training on CodersRank.</p>
     <p>I am loving using the platform and hope there will be lots more to learn and grow from going forward.</p>
 
   </body>
